Changing at index page
Remove the scroll bar and update item's height.

--- a/makarna/index.html
+++ b/makarna/index.html
@@ -32,8 +32,10 @@
          <section class="container">
             <div class="item-11"></div>
             <div class="item-22"></div>
-            <div class="item-33"><h2 class="slogan">EAT PASTA<br>
-                RUN FASTA </h2></div>
+            <div class="item-33">
+            <span class="slogan">EAT &nbsp;PASTA</span>
+            <span class="slogan">RUN FASTA </span>
+            </div>
             <div class="item-44"></div>
             <div class="item-55"></div>
             <div class="item-66"></div>
